--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "normalize.css": "^8.0.1",
     "pagepiling.js": "^1.5.6",
     "selectric": "^1.13.0",
+    "siema": "^1.5.1",
     "slick-carousel": "^1.8.1",
     "slickjs": "^1.0.0",
     "swiper": "^6.3.5",
