--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "animate.css": "^4.1.0",
     "blueimp-file-upload": "^10.31.0",
+    "file-uploader-js": "^0.3.1",
     "flexboxgrid2": "^7.2.1",
     "jquery": "^3.5.1",
     "jrange": "^1.0.4",
