--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-uploader-js": "^0.3.1",
     "flexboxgrid2": "^7.2.1",
     "jquery": "^3.5.1",
+    "jquery.maskedinput": "^1.4.1",
     "jrange": "^1.0.4",
     "normalize.css": "^8.0.1",
     "pagepiling.js": "^1.5.6",
